# transparent-png-python

./: .gitignore  README.md  pyproject.toml
.agent/workflows/: alpha-extraction.md  alpha-from-image.md  alpha-from-prompt.md
src/pngalpha/: __init__.py  cli.py  core.py  gui.py
